Trying again to fix incorrect URL truncation in visitor profile.

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -204,8 +204,7 @@ a.visitor-log-visitor-profile-link {
 
 .action-list-action-icon {
     float:left;
-    margin-right:4px;
-    margin-top:2px;
+    margin-top:6px;
 }
 
 .action-list-url {
